--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.msi filter=lfs diff=lfs merge=lfs -text
+Instaladores_Linux/V$PagueClient.4.1.31Linux_X32.zip filter=lfs diff=lfs merge=lfs -text
+Instaladores_Linux/V$PagueClient.4.1.31Linux_X64.zip filter=lfs diff=lfs merge=lfs -text
