Update Example ElginTEF C#

--- a/Exemplos TEF API - Ativo/C#/NET Framework 4/ApiTefElgin/ApiTefElgin.csproj
+++ b/Exemplos TEF API - Ativo/C#/NET Framework 4/ApiTefElgin/ApiTefElgin.csproj
@@ -60,6 +60,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -132,6 +133,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="2013169_univ_lsr_xl.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="7caeefdac97f2292c398573e342cd717.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
