Update Exemplo ElginTEF Coleta PinPad
Adicionado no exemplo janela com demonstração do uso das funções de RealizarColetaPinPad e ConfirmarColetaPinPad. O código está comentado com explicações, e temos também a documentação com mais detalhes.

--- a/Exemplos TEF API - Ativo/Delphi/ApiTefElgin/ExemploAPITEFElgin.dproj
+++ b/Exemplos TEF API - Ativo/Delphi/ApiTefElgin/ExemploAPITEFElgin.dproj
@@ -111,6 +111,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Utils.pas"/>
+        <DCCReference Include="FormColetaPinPad.pas">
+            <Form>frmColetaPinpad</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
