Update Example ElginTEF C#
Adicionado no exemplo janela com demonstração do uso das funções de RealizarColetaPinPad e ConfirmarColetaPinPad. O código está comentado com explicações, e temos também a documentação com mais detalhes.

--- a/Exemplos TEF API - Ativo/C#/NET Framework 4/ApiTefElgin/ApiTefElgin.csproj
+++ b/Exemplos TEF API - Ativo/C#/NET Framework 4/ApiTefElgin/ApiTefElgin.csproj
@@ -83,6 +83,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ColetaPinPad.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -93,6 +97,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ColetaPinPad.xaml.cs">
+      <DependentUpon>ColetaPinPad.xaml</DependentUpon>
     </Compile>
     <Compile Include="ControleAPI.cs" />
     <Compile Include="MainWindow.xaml.cs">
