atualização dos exemplos tef

--- a/Exemplos TEF/Exemplos TEF DLL - ATIVO/C#/NET Framework 4/ApiTefElgin/bin/x86/Debug/e1_tef_configs.json
+++ b/Exemplos TEF/Exemplos TEF DLL - ATIVO/C#/NET Framework 4/ApiTefElgin/bin/x86/Debug/e1_tef_configs.json
@@ -3,7 +3,8 @@
     "ipClientTCP": "127.0.0.1",
     "loja": "01",
     "nomeEstabelecimento": "Elgin",
+    "operacaoPendenciaCustomizada": true,
     "portaClientTCP": 60906,
-    "textoPinpad": "Meu PDV",
+    "textoPinpad": "Meu PDV C#",
     "versaoAC": "v1.0.000"
 }
